--- a/Format.tex
+++ b/Format.tex
@@ -31,6 +31,8 @@
 \usepackage{bm} %Boldface math, load after other math font packages
 
 %%%% Others
+\usepackage{graphicx}
+\usepackage[export]{adjustbox}
 \usepackage[dvipsnames,svgnames]{xcolor} %Must load before tcolorbox
 \usepackage[breakable]{tcolorbox} %Customized Box
 \tcbuselibrary{skins}
