--- a/macro.tex
+++ b/macro.tex
@@ -53,6 +53,8 @@
 \newcommand*{\Geomv}{\mathsf{Geom}}
 \newcommand*{\Binomv}{\mathsf{Binom}}
 \newcommand*{\NegBinomv}{\mathsf{NB}}
+\newcommand*{\Gaus}{\mathsf{N}}
+
 
 \newcommand*{\iidsim}{\stackrel{\mathrm{i.i.d.}}{\sim}}
 \newcommand*{\diff}{\,\mathrm{d}}
