--- a/Quiz/main.tex
+++ b/Quiz/main.tex
@@ -13,7 +13,7 @@
     \input{../macro.tex}
 
 %%%% Document Information %%%%
-    \title{In-Recitation Quiz (Cover Pset6)}
+    \title{In-Recitation Quiz (Cover Pset8)}
     \author{}
     \date{}
 
@@ -30,14 +30,15 @@ NetID: \myrule \hfill RUID: \myrule
         \begin{minipage}{0.8\textwidth}
         \textbf{Quiz Instructions:}
             \begin{itemize}
-            \item Indicate your answer in the box provided. Answers indicated elsewhere will not be graded and receive a zero grade, irrespective of the correctness.
+            \item Indicate your answer in the box provided. Answers indicated elsewhere will not be graded and receive a \textbf{zero} grade, irrespective of the correctness.
             \item \textbf{CREDIT} is only given for \textbf{CORRECT} answers and \textbf{NO PARTIAL CREDIT}.
+            \item Simplify your answer as much as possible.
             \end{itemize}
         \end{minipage}
         }
 \end{center}
 
-\input{collection/Pset7.tex}
+\input{collection/Pset8.tex}
 
 \begin{stretchbox}
     Answers: \hfill
