--- a/Note/collection/chapter4.tex
+++ b/Note/collection/chapter4.tex
@@ -133,7 +133,7 @@
 
 \section{Gaussian Random Variables}
 \begin{theorem}[Gaussian Integral]
-    \[\int_{-\infty}^{\infty}e^{-x^2}\diff x=\pi.\]
+    \[\int_{-\infty}^{\infty}e^{-x^2}\diff x=\sqrt{\pi}.\]
 \end{theorem}
 
 \begin{definition}[Gaussian Random Variable]
@@ -168,7 +168,7 @@
     $\Phi(-z)=1-\Phi(z).$
 \end{theorem}
 
-\includegraphics[width=\textwidth, center]{normal_cdf.pdf}
+% \includegraphics[width=\textwidth, center]{normal_cdf.pdf}
 
 \section{Delta Function, Mixed(Being Discrete and Continuous at the same time) Random Variable}
 \begin{definition}[Unit Impulse (Delta) Function]
