--- a/Note/collection/chapter1.tex
+++ b/Note/collection/chapter1.tex
@@ -31,7 +31,7 @@
     \begin{enumerate}
         \item There are three Set Operations: $A \cup B, A \cap B, A^{^\mathsf{c}}$.
         \item $\P{A \cup B} = \P{A}+\P{B}-\P{A\cap B}$.
-        \item \textbf{Union Bound:} $\P{\cup_{i=1}^N A_i}\leq \sum_{i=1}^{N}\P{A_i}$
+        \item \textbf{Union Bound:} $\P{\cup_{i=1}^N A_i}\leq \sum_{i=1}^{N}\P{A_i}$.
         \item \textbf{Mutually Exclusive:}~$\P{A \cap B}=0$ so that $\P{A \cup B} = \P{A}+\P{B}$.
         \item \textbf{Collectively Exhaustive:}~$\P{A\cup B}=1$.
         \item \textbf{Partitions (i.e., Mutually Exclusive \& Collectively Exhaustive):}~$\P{\cup_{i=1}^N A_i}=\sum_{i=1}^{N}\P{A_i}=1$.
@@ -50,7 +50,7 @@
              &= \sum_{i=1}^{N}\condP{A}{B_i}\P{B_i}. \tag{Definition of Conditional Probability}
         \end{align}
     \end{enumerate}
-    \item Bayes' Theorem:~$\condP{A}{B} = \frac{\condP{B}{A}\P{A}}{\P{B}}$
+    \item Bayes' Theorem:~$\condP{A}{B} = \frac{\condP{B}{A}\P{A}}{\P{B}}$.
     \item Independent:{
         \begin{enumerate}
             \item $\P{A\cap B}=\P{A}\P{B}$.
