--- a/Note/collection/chapter4.tex
+++ b/Note/collection/chapter4.tex
@@ -3,7 +3,7 @@
 
 \section{Continuous sample space} 
 \begin{axiom}
-    A random variable $X$ is continuous if the range $S_X$ consists of one or more intervals. For each $x\in S_X$, $\P{X=x}=0$. 
+    A random variable $X$ is continuous if the range $S_X$ consists of one or more intervals. For $x\in S_X$, $\P{X=x}=0$. 
 \end{axiom}
 
 
@@ -24,7 +24,7 @@
 
 
 \section{Probability Density Function}
-Start with a continuous random variable $X$ with CDF $F_X(x)$. The probability of ``$X$ with volumn $\triangle$'' is defined as:
+Start with a continuous random variable $X$ with CDF $F_X(x)$. The probability of ``$X$ with volume $\triangle$'' is defined as:
 \begin{align*}
     \P{x<X\leq x+\triangle} 
     &= F_X(x+\triangle)-F_X(x) \\
