--- a/Format.tex
+++ b/Format.tex
@@ -24,29 +24,29 @@
 \usepackage{libertinus} %Very popular math font
 \usepackage[T1]{fontenc} %Better Printing Font
 \usepackage[utf8]{inputenc} %enable utf8 encoding
-\usepackage[english]{babel}
+\usepackage[english]{babel} %English Language
 
 %%%% Math Env
-\usepackage{amsfonts,amsmath,amssymb, amsthm}
-\usepackage{mathtools} 
+\usepackage{amsfonts,amsmath,amssymb, amsthm} %Math Font Packages
+\usepackage{mathtools} %Better Math Environments
 \usepackage{mleftright}  %Fixes some annoying spacing issues
 \usepackage{bm} %Boldface math, load after other math font packages
 
 %%%% Beautiful Stuff
-\usepackage{graphicx}
-\usepackage[export]{adjustbox}
+\usepackage{graphicx} %Better Graphics
+\usepackage[export]{adjustbox} %Better Graphics
 \usepackage[dvipsnames,svgnames]{xcolor} %Must load before tcolorbox
 \usepackage[breakable]{tcolorbox} %Customized Box
 \tcbuselibrary{skins}
 \usepackage{tabularx} %Better Table
 
 %%%% Theorems etc (also  problems)
-\usepackage[shortlabels]{enumitem}
+\usepackage[shortlabels]{enumitem} %Better List
 \usepackage{hyperref, cleveref} %Fantastic crossrefer
-\usepackage{thmtools}
-\usepackage{thm-restate}
+\usepackage{thmtools} %Better Theorems
+\usepackage{thm-restate} %Better Theorems
 \declaretheorem[numbered=no, style=definition]{axiom}
-\declaretheorem[numberwithin=chapter,style=definition]{definition}
+\declaretheorem[numberwithin=section,style=definition]{definition}
 \declaretheorem[sibling=definition]{theorem, lemma, corollary, proposition, conjecture}
 \declaretheorem[numbered=no,style=remark]{remark, claim}
 
