--- a/formats/formats.tex
+++ b/formats/formats.tex
@@ -45,15 +45,11 @@
 \RequirePackage{hyperref, cleveref} %Fantastic crossrefer
 \RequirePackage{amsthm, thmtools} %Better Theorems
 \RequirePackage{thm-restate} %Better Theorems
-\declaretheorem[numbered=no, style=definition]{axiom}
-\declaretheorem[numberwithin=section,style=definition]{definition}
-\declaretheorem[sibling=definition]{theorem, lemma, corollary, proposition, conjecture}
-\declaretheorem[numbered=no,style=remark]{remark, claim}
 
 %%%% Code Packages
 \RequirePackage{algorithm2e} % Package to create pseudo-code
 \RequirePackage{listings} % Package to insert code
-\RequirePackage{keyval}
+% \RequirePackage{keyval}
 
 %%%% Display Packages
 \RequirePackage[document]{ragged2e} % Package to justify text
