--- a/BeamerExample/main.tex
+++ b/BeamerExample/main.tex
@@ -1,5 +1,5 @@
 \documentclass[11pt]{../formats/RU}
-\input{../formats/macros.tex}
+\input{../Formats/Macro.tex}
 
 %Theorem style
 \declaretheorem[numbered=no, style=definition]{axiom}
