--- a/ECE226Note/main.tex
+++ b/ECE226Note/main.tex
@@ -9,8 +9,8 @@
 \newcommand{\rightbottom}{}        
 
 %%%% Load Format %%%%
-\input{../formats/formats.tex}
-\input{../formats/macros.tex}
+\input{../Formats/Format.tex}
+\input{../Formats/Macro.tex}
 
 %%%% Theorem Style %%%%
 \declaretheorem[numbered=no, style=definition]{axiom}
