--- a/ECE226Quiz/main.tex
+++ b/ECE226Quiz/main.tex
@@ -9,8 +9,8 @@
 \newcommand{\rightbottom}{kailong.wang@outlook.com}        
 
 %%%% Load Format %%%%
-\input{../formats/formats.tex}
-\input{../formats/macros.tex}
+\input{../Formats/format.tex}
+\input{../Formats/Macro.tex}
 
 %%%% Document Information %%%%
 \title{In-Recitation Quiz (Cover Pset8)}
