--- a/ECE226Note/main.tex
+++ b/ECE226Note/main.tex
@@ -38,5 +38,6 @@
 \input{collection/chapter2.tex}
 \input{collection/chapter3.tex}
 \input{collection/chapter4.tex}
+\input{collection/chapter5.tex}
 
 \end{document}
