--- a/ECE226Note/collection/chapter5.tex
+++ b/ECE226Note/collection/chapter5.tex
@@ -28,8 +28,8 @@ The joint CDF is a \textbf{complete} probability model for any pair of random va
 The joint PMF is a \textbf{complete} probability model for any pair of discrete random variables $X$ and $Y$.
 
 \begin{theorem}
-    For discrete random variables $X$ and $Y$ and any set $B$ in the $X$, $Y$ plane, the probability of the event $\{(X,Y)\in B\}$ is 
-    \[\P{B}=\sum_{(x,y)\in B}P_{X,Y}(x,y).\]
+    For discrete random variables $X$ and $Y$ and any set $B$ in the $X$, $Y$ plane, the probability of the event $\set{(X,Y)\in B}$ is 
+    \[\P{[B]}=\sum_{(x,y)\in B}P_{X,Y}(x,y).\]
 \end{theorem}
 
 Apparently, the joint PMF is non-negative and sums to one.
