--- a/Formats/Macro.tex
+++ b/Formats/Macro.tex
@@ -81,7 +81,7 @@
 \newcommand*{\Lipnorm}[1]{\norm*{#1}_{\mathrm{Lip}}}
 
 %%%%
-\newcommand*{\set}[1]{\bracks*{\,#1\,}}
+\newcommand*{\set}[1]{\braces*{\,#1\,}}
 \newcommand*{\ie}{\textnormal{i.e.\ }}
 \newcommand*{\eg}{\textnormal{e.g.\ }}
 \newcommand*{\etc}{\textnormal{etc.\ }}
