--- a/ECE226Note/collection/chapter5.tex
+++ b/ECE226Note/collection/chapter5.tex
@@ -54,11 +54,11 @@ The joint PDF is a \textbf{complete} probability model for any pair of continuou
 
 \begin{theorem}
     The probability that the continuous random variables $(X,Y)$ are in $A$ 
-    \[P[A]=\iint\limits_A f_{X,Y}(x,y)\diff x\diff y.\]
+    \[\P{[A]}=\iint\limits_A f_{X,Y}(x,y)\diff x\diff y.\]
 \end{theorem}
 
 The joint PDF is non-negative and integrates to one.
-\[\int_{-\infty}^{x}\int_{-\infty}^{y}f_{X,Y}(x,y)\diff x\diff y=1.\]
+\[\int_{-\infty}^{\infty}\int_{-\infty}^{\infty}f_{X,Y}(x,y)\diff x\diff y=1.\]
 
 \section{Marginal PDF}
 \begin{theorem}
